<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>dk.sdu.mmmi.cbse</groupId>
    <artifactId>asteroids.jpms</artifactId>
    <version>1.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>AsteroidsFX</name>

    <modules>
        <module>Common</module>
        <module>CommonBullet</module>
        <module>CommonAsteroids</module>
        <module>Asteroids</module>
        <module>Player</module>
        <module>Bullet</module>
        <module>Collision</module>
        <module>Enemy</module>
        <module>Core</module>
        <module>ScoreService</module>
        <module>ScoreClient</module>
    </modules>

    <properties>
        <java>java</java>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <spring.version>6.1.3</spring.version>
        <spring-boot.version>3.2.3</spring-boot.version>
        <javafx.version>21.0.2</javafx.version>
        <jackson.version>2.16.1</jackson.version>
        <junit-jupiter.version>5.10.2</junit-jupiter.version>
        <mockito.version>5.11.0</mockito.version>
        <exec-maven-plugin.version>3.5.0</exec-maven-plugin.version>
        <maven-dependency-plugin.version>3.6.1</maven-dependency-plugin.version>
        <maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
        <maven-surefire-plugin.version>3.2.5</maven-surefire-plugin.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-controls</artifactId>
                <version>${javafx.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-graphics</artifactId>
                <version>${javafx.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-base</artifactId>
                <version>${javafx.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-fxml</artifactId>
                <version>${javafx.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-media</artifactId>
                <version>${javafx.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-web</artifactId>
                <version>${javafx.version}</version>
            </dependency>

            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-core</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.databind</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-annotations</artifactId>
                <version>${jackson.version}</version>
            </dependency>

            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-api</artifactId>
                <version>${junit-jupiter.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-engine</artifactId>
                <version>${junit-jupiter.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-core</artifactId>
                <version>${mockito.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-junit-jupiter</artifactId>
                <version>${mockito.version}</version>
                <scope>test</scope>
            </dependency>

            <dependency>
                <groupId>jakarta.servlet</groupId>
                <artifactId>jakarta.servlet-api</artifactId>
                <version>6.0.0</version> <scope>provided</scope>
            </dependency>

            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-context</artifactId>
                <version>${spring.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-web</artifactId>
                <version>${spring.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-beans</artifactId>
                <version>${spring.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-core</artifactId>
                <version>${spring.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven-compiler-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${maven-surefire-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>${spring-boot.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-dependency-plugin</artifactId>
                    <version>${maven-dependency-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>exec-maven-plugin</artifactId>
                    <version>${exec-maven-plugin.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <artifactId>maven-clean-plugin</artifactId>
                <version>3.2.0</version>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <executions>
                    <execution>
                        <id>copy-third-party-dependencies-to-mods</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}/mods-mvn</outputDirectory>
                            <includeScope>runtime</includeScope>
                            <overWriteReleases>false</overWriteReleases>
                            <overWriteSnapshots>true</overWriteSnapshots>
                            <silent>true</silent>
                            <includeGroupIds>
                                org.openjfx,org.springframework,com.fasterxml.jackson.core,jakarta.servlet,
                                org.slf4j,ch.qos.logback,org.apache.logging.log4j </includeGroupIds>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <executable>${java}</executable>
                    <workingDirectory>.</workingDirectory>
                    <arguments>
                        <argument>--module-path=${project.build.directory}/mods-mvn;Common/target/*;CommonBullet/target/*;CommonAsteroids/target/*;Asteroids/target/*;Player/target/*;Bullet/target/*;Collision/target/*;Enemy/target/*;Core/target/*;ScoreService/target/*;ScoreClient/target/*</argument>
                        <argument>--add-modules=ALL-MODULE-PATH</argument>

                        <argument>--add-opens=Core/dk.sdu.mmmi.cbse.main=ALL-UNNAMED</argument>
                        <argument>--add-opens=Asteroids/dk.sdu.mmmi.cbse.asteroid=ALL-UNNAMED</argument>
                        <argument>--add-opens=Bullet/dk.sdu.mmmi.cbse.bulletsystem=ALL-UNNAMED</argument>
                        <argument>--add-opens=Collision/dk.sdu.mmmi.cbse.collisionsystem=ALL-UNNAMED</argument>
                        <argument>--add-opens=Enemy/dk.sdu.mmmi.cbse.enemy=ALL-UNNAMED</argument>
                        <argument>--add-opens=Player/dk.sdu.mmmi.cbse.playersystem=ALL-UNNAMED</argument>
                        <argument>--add-opens=ScoreClient/dk.sdu.mmmi.cbse.scoreclient=ALL-UNNAMED</argument>
                        <argument>--add-opens=ScoreService/dk.sdu.mmmi.cbse.scoreservice=ALL-UNNAMED</argument>

                        <argument>--add-exports=Core/dk.sdu.mmmi.cbse.main=ALL-UNNAMED</argument>
                        <argument>--add-exports=Asteroids/dk.sdu.mmmi.cbse.asteroid=ALL-UNNAMED</argument>
                        <argument>--add-exports=Bullet/dk.sdu.mmmi.cbse.bulletsystem=ALL-UNNAMED</argument>
                        <argument>--add-exports=Collision/dk.sdu.mmmi.cbse.collisionsystem=ALL-UNNAMED</argument>
                        <argument>--add-exports=Enemy/dk.sdu.mmmi.cbse.enemy=ALL-UNNAMED</argument>
                        <argument>--add-exports=Player/dk.sdu.mmmi.cbse.playersystem=ALL-UNNAMED</argument>
                        <argument>--add-exports=ScoreClient/dk.sdu.mmmi.cbse.scoreclient=ALL-UNNAMED</argument>
                        <argument>--add-exports=ScoreService/dk.sdu.mmmi.cbse.scoreservice=ALL-UNNAMED</argument>

                        <argument>--module</argument>
                        <argument>Core/dk.sdu.mmmi.cbse.main.Main</argument>
                    </arguments>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>parent-project</id>
            <activation>
                <file>
                    <missing>src</missing>
                </file>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <artifactId>maven-clean-plugin</artifactId>
                        <version>3.2.0</version>
                        <configuration>
                            <filesets>
                                <fileset>
                                    <directory>mods-mvn</directory>
                                    <includes>
                                        <include>**/*</include>
                                    </includes>
                                    <followSymlinks>false</followSymlinks>
                                </fileset>
                                <fileset>
                                    <directory>libs</directory> <includes>
                                    <include>**/*</include>
                                </includes>
                                    <followSymlinks>false</followSymlinks>
                                </fileset>
                            </filesets>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>